--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Crime rates in your London borough</title>
+    <link rel="stylesheet" type="text/css" href="mystyles.css">
 <style>
 
     body {
