Remove unecessary code in index.html, add todo for responsive design

--- a/index.html
+++ b/index.html
@@ -3,20 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Crime rates in your London borough</title>
-    <link rel="stylesheet" type="text/css" href="mystyles.css">
 <style>
-
-    body {
-        background-color: #031a98;
-        color: white
-    }
- 
+<!-- Add the styling here -->
 </style>
 
 </head>
 <body>
 <!-- Add the elements here -->
 </body>
-<div class="myDiv"></div>
-    <h1 style="font-family: Verdana"> Crime Rates in your London Borough</h1>
 </html>
